--- a/breach.css
+++ b/breach.css
@@ -2,9 +2,7 @@
     box-sizing: border-box;
 }
 
-body {
-  padding-bottom: 1000px;
-}
+
 .top {
   padding-top: 40px;
   display: grid;
@@ -91,6 +89,7 @@ button {
   border: none;
   height: 65px;
   margin-top: 30px;
+  margin-left: 20px;
   
  
 }
@@ -167,9 +166,7 @@ button {
 .links:hover {
   text-decoration: none;
 }
-/* .content{
-  padding-left: 50px;
-} */
+
 #navbar {
   display: flex;
   column-gap: 50px;
@@ -177,7 +174,7 @@ button {
   font-size: 1.8rem;
   padding-bottom: 50px;
   height: 52px;
-  width: 65%;
+  width: 100%;
   padding-left: 90px;
   background-color:white;
   border-bottom: 1px solid rgb(240, 237, 237);
@@ -192,10 +189,6 @@ button {
 }
 .no{
   border: none
-}
-.ft {
-  height: 35px;
-  border-bottom: 2px black solid;
 }
 
 
@@ -241,7 +234,7 @@ button {
 
 @media (min-width: 620px) {
   .container-a {
-    grid-template-columns: 350px 60%;
+    grid-template-columns: 1.5fr 2fr;
   }
   .big-text{
       font-size: 2.5rem
@@ -254,12 +247,20 @@ button {
   }
   
 }
-@media (min-width: 950px) {
+@media (min-width: 850px) {
   .container-a {
-    grid-template-columns: 350px 40%;
+    width:90%;
+    grid-template-columns: 1.5fr 2fr;
+   
   }
+  /* #navbar */
 }
-
+@media (min-width:1200px){
+  .container-a{
+     padding-left: 50px;
+  }
+  
+}
 .general {
   background-color: white;
   border: 1px solid grey;
@@ -306,10 +307,15 @@ button {
         display: grid;
         grid-template-columns: 2fr 1fr;
     }
+    #navbar{
+      width: 65%
+    }
+    /* .container-a{
+      width:50%
+    } */
+
 } 
-main{
-  margin-left: 70px;
-}
+
  
 .footer-link{
     margin-left: 40px;
