--- a/breach.css
+++ b/breach.css
@@ -133,6 +133,7 @@ button {
   }
   .joinbtn{
     width: 40%;
+    margin-left: 0;
   }
   .sub {
     position: absolute;
@@ -310,9 +311,7 @@ button {
     #navbar{
       width: 65%
     }
-    /* .container-a{
-      width:50%
-    } */
+    
 
 } 
 
